# crypto-analyzer-for-AI-in-ide

./: .gitignore  README.md  pyproject.toml
.agent/rules/: rules.md
.agent/workflows/: workflows.md
.cursor/: mcp.json
.cursor/rules/: first-read-files.mdc
.windsurf/: mcp_config.json
.windsurf/workflows/: workflows.md
crypto_analyzer/: __init__.py  config.py  indicators.py  json_summary.py  rate_limiter.py  storage.py  volatility_analysis.py
crypto_analyzer/fetchers/: __init__.py  binance.py  okx.py
docs/: AI_GUIDE.md  trade_journal.md  user_strategy
scripts/: crypto_fetcher.py  get_conversation_time.py  market_snapshot.py  timer_reminder.py
