[project]
name = "bcoin-script"
version = "0.1.0"
description = "CLI tools to fetch and analyze crypto futures market data (Binance & OKX), including snapshots and technical indicators."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.1,<2.0.0",
    "requests>=2.32.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
]
